# aliexpress-pinterest-bot

./: .env.example  .gitignore  README.md  build_exe.bat  pyproject.toml
src/ae_pinner/: __init__.py  ai_generator.py  aliexpress.py  bot.py  cli.py  config.py  database.py  pinterest.py  web.py
